increased size of the toggle to hide and show parameter groups and also fixed the vertical alignment
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@12933 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/css/frozen/runtaskform_3_8_1.css
+++ b/website/css/frozen/runtaskform_3_8_1.css
@@ -27,9 +27,13 @@
     border: 2px solid #BDD3E9;
 }
 
+.paramSectionToggle
+{
+    vertical-align: middle;
+}
+
 .pHeaderTitleDiv
 {
-    vertical-align: top;
     font-size: 14px;
     font-weight: bold;
 }
